--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -225,3 +225,11 @@ ui bootstrap tweaks
 }
 
 /* jhipster-needle-css-add-main JHipster will add new css style */
+
+.tbp-import-form {
+    margin-right: 10px;
+}
+
+#tbp-timesheet-import-button {
+    margin-left: 20px;
+}
