--- a/src/main/webapp/app/entities/timesheet-app/timesheet-app.component.html
+++ b/src/main/webapp/app/entities/timesheet-app/timesheet-app.component.html
@@ -1,3 +1,128 @@
-<p>
-  timesheet-app works!
-</p>
+<div>
+    <h2 id="page-heading">
+        <span jhiTranslate="global.menu.entities.app-timesheet">APP Timesheet</span>
+    </h2>
+    <div class="row justify-content-center" *ngIf="allTeams">
+        <div>
+            <form class="form-inline" name="appImputationForm" role="form" novalidate #appImputationForm="ngForm"
+                  [ngSwitch]="isAdmin()" (ngSubmit)="getTimesheet()">
+                <jhi-alert-error></jhi-alert-error>
+                <div class="form-group tbp-import-form" *ngSwitchCase="true">
+                    <label class="form-control-label"
+                           for="field_code_project_admin">Code project</label>
+                    <select class="form-control" id="field_code_project_admin" name="code_project"
+                            [(ngModel)]="appRequestBody.agresso">
+                        <option *ngFor="let team of allTeams" [value]="team.agresso">{{team.name}}</option>
+                    </select>
+                </div>
+                <div class="form-group tbp-import-form" *ngSwitchCase="false">
+                    <label class="form-control-label"
+                           for="field_code_project_delco">Code project</label>
+                    <select class="form-control" id="field_code_project_delco" name="code_project"
+                            [(ngModel)]="appRequestBody.agresso">
+                        <option [value]="myTeam.agresso">{{myTeam.name}}</option>
+                    </select>
+                </div>
+                <div class="form-group tbp-import-form">
+                    <label class="form-control-label"
+                           for="field_start_date">Start Date</label>
+                    <input class="form-control" type="date" id="field_start_date" name="start_date"
+                           [(ngModel)]="appRequestBody.startDate"/>
+                </div>
+                <div class="form-group tbp-import-form">
+                    <label class="form-control-label"
+                           for="field_end_date">End Date</label>
+                    <input class="form-control" type="date" id="field_end_date" name="end_date"
+                           [(ngModel)]="appRequestBody.endDate"/>
+                </div>
+                <div class="form-group tbp-import-form">
+                    <button type="submit" id="tbp-timesheet-import-button" class="btn btn-primary float-right">
+                        <!--<fa-icon [icon]="'calendar'"></fa-icon>-->
+                        <span jhiTranslate="global.menu.entities.importAPP">
+                            Import APP
+                        </span>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <jhi-alert></jhi-alert>
+    <br/>
+    <div class="table-responsive" *ngIf="imputations">
+        <table class="table table-striped">
+            <thead>
+            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
+                <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>-->
+                <!--<fa-icon [icon]="'sort'"></fa-icon>-->
+                <!--</th>-->
+                <th><span>Collaborartor</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th><span>Total</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="month"><span jhiTranslate="imputationSqliApp.imputation.month">Month</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="year"><span jhiTranslate="imputationSqliApp.imputation.year">Year</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <!--<th jhiSortBy="imputationType.id"><span-->
+                <!--jhiTranslate="imputationSqliApp.imputation.imputationType">Imputation Type</span>-->
+                <!--<fa-icon [icon]="'sort'"></fa-icon>-->
+                <!--</th>-->
+                <th *ngFor="let day of days" [id]="day">{{day + '/' + imputations.month}}</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let monthlyImputation of imputations.monthlyImputations ;trackBy: trackId">
+                <!--<td><a [routerLink]="['/imputation', imputations.id, 'view' ]">{{imputations.id}}</a></td>-->
+                <td>{{monthlyImputation.collaborator.lastname + ' ' + monthlyImputation.collaborator.firstname}}</td>
+                <td>{{monthlyImputation.total}}</td>
+                <td>{{imputations.month}}</td>
+                <td>{{imputations.year}}</td>
+                <!--<td>-->
+                <!--<div *ngIf="imputations.imputationType">-->
+                <!--<a-->
+                <!--[routerLink]="['../imputation-type', imputations.imputationType?.id, 'view' ]">{{imputations.imputationType?.name}}</a>-->
+                <!--</div>-->
+                <!--</td>-->
+                <td *ngFor="let day of days" [id]="day">
+                    <span *ngFor="let dailyImputation of monthlyImputation.dailyImputations">{{day == dailyImputation.day? dailyImputation.charge:''}}</span>
+                </td>
+                <!--<td class="text-right">-->
+                <!--<div class="btn-group flex-btn-group-container">-->
+                <!--<button type="submit" [routerLink]="['/imputation', imputations.id, 'view' ]"-->
+                <!--class="btn btn-info btn-sm">-->
+                <!--<fa-icon [icon]="'eye'"></fa-icon>-->
+                <!--<span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>-->
+                <!--</button>-->
+                <!--<button type="submit" [routerLink]="['/imputation', imputations.id, 'edit']"-->
+                <!--class="btn btn-primary btn-sm">-->
+                <!--<fa-icon [icon]="'pencil-alt'"></fa-icon>-->
+                <!--<span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>-->
+                <!--</button>-->
+                <!--<button type="submit"-->
+                <!--[routerLink]="['/', 'imputation', { outlets: { popup: imputations.id + '/delete'} }]"-->
+                <!--replaceUrl="true" queryParamsHandling="merge" class="btn btn-danger btn-sm">-->
+                <!--<fa-icon [icon]="'times'"></fa-icon>-->
+                <!--<span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>-->
+                <!--</button>-->
+                <!--</div>-->
+                <!--</td>-->
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <!--<div *ngIf="imputations && imputations.length">-->
+    <!--<div class="row justify-content-center">-->
+    <!--<jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">-->
+    <!--</jhi-item-count>-->
+    <!--</div>-->
+    <!--<div class="row justify-content-center">-->
+    <!--<ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"-->
+    <!--[rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>-->
+    <!--</div>-->
+    <!--</div>-->
+</div>
