--- a/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
+++ b/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
@@ -10,7 +10,7 @@
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.project_code"
                            for="field_code_project_admin">Code projet</label>
                     <select class="form-control" id="field_code_project_admin" name="code_project" [(ngModel)]="tbpRequestBody.idTbp">
-                        <option [ngValue]="team.idTbp" *ngFor="let team of allTeams" [ngValue]="team.idTbp">{{team.name}}</option>
+                        <option *ngFor="let team of allTeams" [ngValue]="team.idTbp">{{team.name}}</option>
                     </select>
                 </div>
                 <div class="form-group tbp-import-form" *ngSwitchCase="true">
