--- a/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
+++ b/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
@@ -2,18 +2,18 @@
     <h2 id="page-heading">
         <span jhiTranslate="global.menu.entities.tbp-timesheet">TBP Timesheet</span>
     </h2>
-    <div class="row justify-content-center" *ngIf="allTeams">
+    <div class="row justify-content-center" *ngIf="allTeams || myTeam">
         <div>
             <jhi-alert-error></jhi-alert-error>
-            <form class="form-inline" name="tbpImputationForm" role="form" novalidate #tbpImputationForm="ngForm" [ngSwitch]="isDelco()" (ngSubmit)="getTimesheet()">
-                <div class="form-group tbp-import-form" *ngSwitchCase="false">
+            <form class="form-inline" name="tbpImputationForm" role="form" novalidate #tbpImputationForm="ngForm" [ngSwitch]="isAdmin()" (ngSubmit)="getTimesheet()">
+                <div class="form-group tbp-import-form" *ngSwitchCase="true">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.project_code"
                            for="field_code_project_admin">Code projet</label>
                     <select class="form-control" id="field_code_project_admin" name="code_project" [(ngModel)]="tbpRequestBody.idTbp">
                         <option *ngFor="let team of allTeams" [ngValue]="team.idTbp">{{team.name}}</option>
                     </select>
                 </div>
-                <div class="form-group tbp-import-form" *ngSwitchCase="true">
+                <div class="form-group tbp-import-form" *ngSwitchCase="false">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.project_code"
                            for="field_code_project_delco">Code projet</label>
                     <select class="form-control" id="field_code_project_delco" name="code_project" [(ngModel)]="tbpRequestBody.idTbp">
