costomize comparison service and view

--- a/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
+++ b/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
@@ -1,18 +1,18 @@
 <div>
     <h2 id="page-heading">
-        <span jhiTranslate="global.menu.entities.app-timesheet">APP Timesheet</span>
+        <span jhiTranslate="global.menu.entities.app-vs-tbp">APP VS TBP</span>
     </h2>
     <div class="row justify-content-center" *ngIf="allTeams || myTeam">
         <div>
             <jhi-alert-error></jhi-alert-error>
-            <form class="form-inline" name="appImputationForm" role="form" novalidate
-                  [ngSwitch]="isAdmin()" (ngSubmit)="getTimesheet()">
+            <form class="form-inline" name="comparatorForm" role="form" novalidate
+                  [ngSwitch]="isAdmin()" (ngSubmit)="compare()">
                 <div class="form-group tbp-import-form" *ngSwitchCase="true">
                     <label class="form-control-label"
                            for="field_code_project_admin">Code project</label>
                     <select class="form-control" id="field_code_project_admin" name="code_project"
-                            [(ngModel)]="appRequestBody.agresso">
-                        <option *ngFor="let team of allTeams" [value]="team.agresso">{{team.name}}</option>
+                            [(ngModel)]="appTbpRequestBody.team">
+                        <option *ngFor="let team of allTeams" [value]="team">{{team.name}}</option>
                     </select>
                 </div>
                 <div class="form-group tbp-import-form" *ngSwitchCase="false">
@@ -22,39 +22,22 @@
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.year"
                            for="field_year">Year</label>
                     <select class="form-control" id="field_year" name="year"
-                            [(ngModel)]="appRequestBody.year" (change)="initializeDayOfCurrentMonth()">
-                        <option *ngFor="let year of years" [selected]="year == currentYear">{{year}}</option>
+                            [(ngModel)]="appTbpRequestBody.year" (change)="initializeMonth()">
+                        <option *ngFor="let year of years" [value]="year"
+                                [selected]="year == currentYear">{{year}}</option>
                     </select>
                 </div>
                 <div class="form-group tbp-import-form">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.month"
                            for="field_month">Month</label>
-                    <select class="form-control" id="field_month" name="month"
-                            [(ngModel)]="appRequestBody.month" (change)="initializeDayOfCurrentMonth()">
+                    <select class="form-control" id="field_month" name="month" [(ngModel)]="appTbpRequestBody.month">
                         <option *ngFor="let month of months" [selected]="month == currentMonth">{{month}}</option>
                     </select>
                 </div>
                 <div class="form-group tbp-import-form">
-                    <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.startDay"
-                           for="field_month">Month</label>
-                    <select class="form-control" id="field_startDay" name="startDay"
-                            [(ngModel)]="appRequestBody.startDay">
-                        <option *ngFor="let day of days" >{{day}}</option>
-                    </select>
-                </div>
-                <div class="form-group tbp-import-form">
-                    <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.manDay"
-                           for="field_month">Month</label>
-                    <select class="form-control" id="field_man_day" name="manDay"
-                            [(ngModel)]="appRequestBody.manDay">
-                        <option *ngFor="let manDay of manDays" >{{manDay}}</option>
-                    </select>
-                </div>
-                <div class="form-group tbp-import-form">
                     <button type="submit" id="tbp-timesheet-import-button" class="btn btn-primary float-right">
-                        <!--<fa-icon [icon]="'calendar'"></fa-icon>-->
-                        <span jhiTranslate="global.menu.entities.importAPP">
-                            Import APP
+                        <span jhiTranslate="global.menu.entities.compare">
+                            Compare
                         </span>
                     </button>
                 </div>
@@ -63,4 +46,41 @@
     </div>
     <jhi-alert></jhi-alert>
     <br/>
+
+    <div *ngIf="comparator">
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped">
+                <thead>
+                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
+                    <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
+                    </th>
+                    <th><span jhiTranslate="imputationSqliApp.imputation.collaborator">Collaborator</span>
+                    </th>
+                    <th class="text-center"><span>APP</span>
+                    </th>
+                    <th class="text-center"><span>TBP</span>
+                    </th>
+                    <th class="text-center"><span jhiTranslate="imputationSqliApp.imputation.difference">Difference</span>
+                    </th>
+                    <!--<th *ngFor="let day of imputationDays.get(imputation)" [id]="day">{{day + '/' + imputation.month}}</th>-->
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let element of comparator">
+                    <td>{{element.collaborator.id}}</td>
+                    <td><a
+                        [routerLink]="['/collaborator', element.collaborator.id, 'view' ]">{{element.collaborator.lastname + ' ' + element.collaborator.firstname}}</a>
+                    </td>
+                    <td class="text-center"><b>{{element.totalApp}}</b></td>
+                    <td class="text-center"><b>{{element.totalCompared}}</b></td>
+                    <td class="text-center"[ngStyle]="{color:getcolor(element.difference)}"><b>{{element.difference}}</b></td>
+                    <!--<td class="text-center" *ngFor="let day of imputationDays.get(imputation)" [id]="day">-->
+                    <!--<span *ngFor="let dailyImputation of monthlyImputation.dailyImputations">{{day == dailyImputation.day ? dailyImputation.charge : ''}}</span>-->
+                    <!--</td>-->
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
 </div>
