fixing collab id is an empty string bug

--- a/src/main/webapp/app/entities/comparator-app-ppmc/comparator-app-ppmc.component.html
+++ b/src/main/webapp/app/entities/comparator-app-ppmc/comparator-app-ppmc.component.html
@@ -69,7 +69,7 @@
                 </td>
                 <td class="text-center">{{element.totalApp}}
                 </td>
-                <td class="text-center">{{element.totalPpmc}}
+                <td class="text-center">{{element.totalCompared}}
                 </td>
                 <td class="text-center" [ngStyle]="{color: getColor(element.difference)}"><b>{{element.difference}}</b>
                 </td>
