create comparator app ppmc advanced component

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -178,6 +178,12 @@
                             <span>APP VS PPMC</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="advanced-comparator-app-ppmc" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.comparator-app-ppmc-advanced">APP VS PPMC - Advanced</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
