--- a/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
+++ b/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
@@ -45,36 +45,36 @@
         </div>
     </div>
     <br/>
-    <div class=" table table-responsive" *ngIf="comparator">
-        <table class="table table-bordered table-striped">
-            <thead>
-            <tr>
-                <th><span jhiTranslate="global.field.id">ID</span>
-                </th>
-                <th><span jhiTranslate="imputationSqliApp.imputation.collaborator">Collaborator</span>
-                </th>
-                <th class="text-center"><span>APP</span>
-                </th>
-                <th class="text-center"><span>PPMC</span>
-                </th>
-                <th class="text-center"><span jhiTranslate="imputationSqliApp.imputation.difference">Difference</span>
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let element of comparator">
-                <td class="text-center">{{element.collaborator.id}}
-                </td>
-                <td><a [routerLink]="['/collaborator', element.collaborator.id, 'view' ]">{{element.collaborator.firstname + ' ' + element.collaborator.lastname}}</a>
-                </td>
-                <td class="text-center">{{element.totalApp}}
-                </td>
-                <td class="text-center">{{element.totalCompared}}
-                </td>
-                <td class="text-center" [ngStyle]="{color: getColor(element.difference)}"><b>{{element.difference}}</b>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <!--<div class=" table table-responsive" *ngIf="comparator">-->
+        <!--<table class="table table-bordered table-striped">-->
+            <!--<thead>-->
+            <!--<tr>-->
+                <!--<th><span jhiTranslate="global.field.id">ID</span>-->
+                <!--</th>-->
+                <!--<th><span jhiTranslate="imputationSqliApp.imputation.collaborator">Collaborator</span>-->
+                <!--</th>-->
+                <!--<th class="text-center"><span>APP</span>-->
+                <!--</th>-->
+                <!--<th class="text-center"><span>PPMC</span>-->
+                <!--</th>-->
+                <!--<th class="text-center"><span jhiTranslate="imputationSqliApp.imputation.difference">Difference</span>-->
+                <!--</th>-->
+            <!--</tr>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+            <!--<tr *ngFor="let element of comparator">-->
+                <!--<td class="text-center">{{element.collaborator.id}}-->
+                <!--</td>-->
+                <!--<td><a [routerLink]="['/collaborator', element.collaborator.id, 'view' ]">{{element.collaborator.firstname + ' ' + element.collaborator.lastname}}</a>-->
+                <!--</td>-->
+                <!--<td class="text-center">{{element.totalApp}}-->
+                <!--</td>-->
+                <!--<td class="text-center">{{element.totalCompared}}-->
+                <!--</td>-->
+                <!--<td class="text-center" [ngStyle]="{color: getColor(element.difference)}"><b>{{element.difference}}</b>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+        <!--</table>-->
+    <!--</div>-->
 </div>
