App & TBP frontend

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -178,6 +178,13 @@
                             <span>APP VS PPMC</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="advanced-comparator-app-tbp" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span>APP VS TBP Details</span>
+                        </a>
+                    </li>
+
                 </ul>
             </li>
 
