--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -173,6 +173,12 @@
                         </a>
                     </li>
                     <li>
+                        <a class="dropdown-item" routerLink="advanced-comparator-app-tbp" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.advanced-app-vs-tbp">APP VS TBP - Advanced</span>
+                        </a>
+                    </li>
+                    <li>
                         <a class="dropdown-item" routerLink="comparator-app-ppmc" (click)="collapseNavbar()">
                             <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
                             <span>APP VS PPMC</span>
@@ -184,13 +190,6 @@
                             <span jhiTranslate="global.menu.entities.comparator-app-ppmc-advanced">APP VS PPMC - Advanced</span>
                         </a>
                     </li>
-                    <li>
-                        <a class="dropdown-item" routerLink="advanced-comparator-app-tbp" (click)="collapseNavbar()">
-                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                            <span>APP VS TBP Details</span>
-                        </a>
-                    </li>
-
                 </ul>
             </li>
 
