--- a/src/main/webapp/app/entities/comparator-app-tbp-advanced/comparator-app-tbp-advanced.component.html
+++ b/src/main/webapp/app/entities/comparator-app-tbp-advanced/comparator-app-tbp-advanced.component.html
@@ -53,9 +53,9 @@
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
                     <th><span jhiTranslate="imputationSqliApp.imputation.collaborator">Collaborator</span>
                     </th>
-                    <th>Imputation Type</th>
-                    <th *ngFor="let day of imputationDays"
-                        [id]="day">{{day}}</th>
+                    <th><span jhiTranslate="imputationSqliApp.imputationType.detail.title">Imputation type</span>
+                    </th>
+                    <th *ngFor="let day of imputationDays" [id]="day">{{day}}</th>
                 </tr>
                 </thead>
                 <tbody *ngFor="let element of comparator">
